GNOME Bugzilla – Bug 635808
Segmentation fault if apg is not installed
Last modified: 2010-12-07 15:14:41 UTC
When apg is not installed, g-c-c crashes trying to open User Accounts panel. Program received signal SIGSEGV, Segmentation fault. generate_passwords (um=0x805080) at um-password-dialog.c:161 161 for (i = 0; lines[i]; i++) {
+ Trace 224841
Thread 1 (Thread 0x7ffff7fc4880 (LWP 8400))